// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<flowsDetailsPanel /> renders flows detailsPanel 1`] = `
<flowsDetailsPanel
  className="details-panel"
  id="0000-0000-0000-0000-0000"
  item={
    Object {
      "description": "Test",
      "name": "Test",
      "type": "Test",
    }
  }
  userHasUpdatePermission={true}
>
  Mock Child
</flowsDetailsPanel>
`;

exports[`<flowsDetailsPanel /> renders flows detailsPanel with no update permision 1`] = `
<flowsDetailsPanel
  className="details-panel"
  id="0000-0000-0000-0000-0000"
  item={
    Object {
      "description": "Test",
      "name": "Test",
      "type": "Test",
    }
  }
  userHasUpdatePermission={false}
>
  Mock Child
</flowsDetailsPanel>
`;
